# FirstBot

./: .gitmodules  .tmuxinator.yml  README.md  ros2-foxy-installed.txt
conf/: ekf_params.yaml  ekf_params.yaml_imu  ekf_params.yaml_imu_with_wheel  ekf_params.yaml_original  ekf_params.yaml_wheel  ekf_params.yaml_with_whell
config/: nav2_default_view.rviz  twist_mux.yaml
firstbot_bringup/: CMakeLists.txt  package.xml
firstbot_bringup/controllers/: robot_controller.yaml
firstbot_bringup/description/: ros2_control.xacro
firstbot_bringup/include/diffdrive_arduino/: config.h
firstbot_bringup/launch/: camera.launch.py  rplidar.launch.py  test_robot.launch.py
firstbot_bringup/src/: .diffdrive_arduino.cpp.swp  arduino_comms.cpp  diffdrive_arduino.cpp
firstbot_cartographer/: CMakeLists.txt  package.xml
firstbot_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py
firstbot_cartographer/rviz/: firstbot_cartographer.rviz
firstbot_description/: CMakeLists.txt  package.xml
firstbot_description/launch/: launch_sim.launch.py  launch_sim.v2.launch.py  rsp.launch.py  sim.launch.py
firstbot_description/rviz/: zara.rviz
firstbot_description/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  (+2 more)
firstbot_navigation2/: CMakeLists.txt  package.xml
hardware/: firstbot.ino
hwtest/: l298n.c  l298n.py  mpu9250_calibration.py
tank_cartographer/: CMakeLists.txt  package.xml
tank_control/: package.xml  setup.py
tank_navigation2/: CMakeLists.txt  package.xml
tools/: 50-cloud-init.yaml  ros2-foxy-installed.txt
(+11 files in other folders)
